--- a/Pages/checkout.html
+++ b/Pages/checkout.html
@@ -724,7 +724,7 @@
 
 
                                     <!-- Delivary Address Modal -->
-                                    <div class="my-modal  " id="shipping-address-modal">
+                                    <div class="my-modal shipping-address-modal " id="shipping-address-modal">
                                         <div class=" modal-content my-p-4">
                                             <button class=" modal-close-btn my-primary-btn my-btn close-btn">
                                                 <span><i class="fa-solid fa-xmark"></i></span>
