shop page create without responsive

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -3529,6 +3529,7 @@
 
 
 
+            // Rating
             document.addEventListener('DOMContentLoaded', () => {
                 const stars = document.querySelectorAll('.rating-stars i');
                 let currentRating = 0;
