--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                             <!-- language -->
                             <div class="language my-dropdown-parent">
-                                <div class="my-flex-center my-gap-1 my-fs-md my-fw-bold"> English <i
+                                <div class="my-flex-center my-gap-1  my-fw-bold"> English <i
                                         class="fa-solid fa-angle-down  my-fw-bold"></i>
                                 </div>
 
@@ -319,7 +319,7 @@
 
                         <!-- _____Header Midel Right_____ -->
                         <div class="right">
-                            <ul class="my-d-flex my-gap-0 my-align-center right-icons">
+                            <ul class="my-d-flex my-gap-1 my-align-center right-icons">
 
                                 <!-- delevary location -->
                                 <li class="my-tooltip" id="notification-btn">
@@ -401,7 +401,8 @@
                         <div class="left my-p-relative">
 
                             <!-- all department button -->
-                            <div class="all-department-btn my-btn my-align-center my-gap-3" id="all-department-btn">
+                            <div class="all-department-btn my-btn my-flex-between my-w-100 my-gap-6"
+                                id="all-department-btn">
                                 <i class="ri-menu-line"></i>
                                 <span>All Departments</span>
                                 <i class="ri-arrow-down-s-line"></i>
@@ -418,7 +419,7 @@
                                         <span><i class="fa-solid fa-angle-right"></i></span>
 
                                         <!-- main dropdown -->
-                                        <ul class="dropdown my-flex-between my-align-start my-gap-6">
+                                        <ul class="dropdown my-flex-between my-align-start my-gap-6 ">
                                             <li>
                                                 <ul class="col">
                                                     <li><a href="#">Baby Toy</a></li>
@@ -429,11 +430,6 @@
                                                     <li><a href="#">Baby Saban</a></li>
                                                     <li><a href="#">Baby Tissue</a></li>
                                                     <li><a href="#">Baby Oil Soft</a></li>
-                                                </ul>
-                                            </li>
-
-                                            <li>
-                                                <ul class="col">
                                                     <li><a href="#">Baby Toy</a></li>
                                                     <li><a href="#">Baby Cream</a></li>
                                                     <li><a href="#">Baby Watch</a></li>
@@ -466,6 +462,12 @@
                                                             </li>
                                                         </ul>
                                                     </li>
+                                                </ul>
+                                            </li>
+
+                                            <li>
+                                                <ul class="">
+
                                                 </ul>
                                             </li>
                                         </ul>
@@ -800,7 +802,7 @@
             <!-- ************************************ -->
             <section class="section-margin support">
                 <div class="my-container">
-                    <div class="support-area my-grid-4 my-grid-sm-2 my-gap-4">
+                    <div class="support-area my-grid-4 my-grid-lg-2 my-grid-xs-1 my-gap-4">
 
                         <!-- single support item -->
                         <div class="my-card my-d-flex my-align-center my-gap-4 single-support-item">
@@ -885,7 +887,7 @@
                         </div>
 
                         <!--______category Start______-->
-                        <div class="category-items my-grid-6 my-mt-6 my-gap-4">
+                        <div class="category-items my-grid-6 my-grid-lg-4 my-grid-sm-2  my-mt-6 my-gap-4">
                             <!-- single category -->
                             <a href="./Pages/category.html" class="item my-card ">
                                 <img src="./Static/images/category-bluebery.jpg" alt="">
@@ -1015,7 +1017,7 @@
                     <div class="big-deal-area my-grid-2 my-mt-4 ">
 
                         <!--____________   sinle deal item   _____________-->
-                        <div class="deal-item left my-card my-flex-between  my-flex-md-column">
+                        <div class="deal-item left my-card my-flex-between  my-flex-lg-column">
 
                             <div class="deal-item-img">
                                 <img src="./Static/images/deal-item1.jpg" alt="deal item1">
@@ -1171,7 +1173,7 @@
                                         Hurry up! offer ends in:
                                     </div>
 
-                                    <div class="my-flex-between">
+                                    <div class="my-flex-between flex-wrap my-gap-2">
                                         <div class="my-mt-2 offer-items my-d-flex my-gap-1">
                                             <div class=" offer-item flex-column  text-center">
                                                 <div class="number">10</div>
@@ -1476,7 +1478,7 @@
 
 
 
-                                <div class="popular-products-area my-grid-3 my-gap-4 my-mt-8 my-grid-md-2 my-grid-sm-1">
+                                <div class="popular-products-area my-grid-3 my-gap-4 my-mt-8 my-grid-lg-2 my-grid-sm-1">
 
                                     <!--______Single Product______-->
                                     <div class="my-card product-cart">
@@ -3754,7 +3756,7 @@
             <!-- ************************************ -->
             <!--      Brands Section  Start  Here      -->
             <!-- ************************************ -->
-            <section class="brand-section my-bg-white-off my-mt-50">
+            <section class="brand-section ">
                 <div class="section-head  my-text-center">
                     <h2 class="">Our Brands</h2>
                     <p>We have 20+ brand</p>
@@ -3838,11 +3840,11 @@
             <!-- ************************************************** -->
             <!--         Popular Product Tag  Start  Here          -->
             <!-- ************************************************** -->
-            <section class="my-bg-white-off product-tags">
-                <div class="my-container">
+            <section class=" product-tags">
+                <div class="my-container ">
                     <h3 class="my-fw-bolder">Popular Product</h3>
                     <div class="product-tags-area my-mt-4 my-pb-3 ">
-                        <ul class="my-justify-between  my-gap-2 flex-wrap my-pb-4">
+                        <ul class="my-justify-between  my-gap-2 flex-wrap my-pb-0">
                             <li class="tag"><a href="#">Room Cleaner</a></li>
                             <li class="tag"><a href="#">Watch</a></li>
                             <li class="tag"><a href="#">Kit</a></li>
@@ -3895,16 +3897,16 @@
             <!-- ************************************** -->
             <!--       Faq Section Start  Here          -->
             <!-- ************************************** -->
-            <section class="section-margin ">
-                <div class="my-container my-border my-radius-md">
+            <section class="section-margin faq">
+                <div class="my-container  my-radius-md my-bg-white-off my-py-4">
 
                     <div class="section-head">
                         <h2>Common Question</h2>
                         <p>Check all QA</p>
                     </div>
 
-                    <div class="my-grid-2 my-grid-md-1 accordion-area   my-gap-6">
-                        <div>
+                    <div class="my-grid-2 my-grid-md-1 accordion-area  my-align-center my-justify-center my-gap-6">
+                        <div class="my-text-center">
                             <img class="max-550   my-radius-md" src="./Static/images/faqs.jpg" alt="faq">
                         </div>
 
